<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mods"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.andri.trueorfalse1.ModsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/trueModsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/trueName"
            android:textColor="@color/trueColor"
            android:textSize="40sp"
            android:textStyle="normal|bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/OrModsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/OrName"
                android:textColor="#137d0e"
                android:textSize="23sp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:id="@+id/oRModsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oRName"
                android:textColor="#8b1515"
                android:textSize="23sp"
                android:textStyle="normal|bold|italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/falseModsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/falseName"
            android:textColor="@color/falseColor"
            android:textSize="40sp"
            android:textStyle="normal|bold|italic" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/modsBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modsTitle"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/titleColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/modsSettingsIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/settings" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/survivalBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/survivalModButton"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/timeBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/timeModButton"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/multiBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/multiModButton"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/categoryBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/categoryModButton"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</RelativeLayout>
