<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_survival"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.andri.trueorfalse1.SurvivalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/survivalBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/back_arrow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="8.3dp"
            android:orientation="horizontal"
            android:id="@+id/heartsLL">

            <ImageView
                android:id="@+id/lifeIV1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="1.7dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/heart"/>

            <ImageView
                android:id="@+id/lifeIV2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="1.7dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/lifeIV3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="1.7dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/lifeIV4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="1.7dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/lifeIV5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="1.7dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/heart" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="9dp"
            android:layout_toLeftOf="@+id/scoreSurvivalTV"
            android:clickable="true"
            app:srcCompat="@drawable/rating" />

        <TextView
            android:id="@+id/scoreSurvivalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:text="0"
            android:textColor="@color/buttonTextColor"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="60dp"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/trueSurvivalBtn"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:text="@string/trueName"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:background="@drawable/true_button"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor" />

        <Button
            android:id="@+id/falseSurvivalBtn"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:text="@string/falseName"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:background="@drawable/false_button"
            android:textStyle="normal|bold"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor" />

    </LinearLayout>

    <Button
        android:id="@+id/skipSurvivalBtn"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="325dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/skip_button"/>

    <TextView
        android:id="@+id/skipTV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10sp"
        android:text="@string/skipButton"
        android:textColor="@color/skipTextColor"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="363dp"/>

    <TextView
        android:id="@+id/skipTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="4"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="340dp"/>

    <ImageView
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="349dp"
        android:layout_marginRight="1dp"
        app:srcCompat="@drawable/skip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skipSurvivalBtn"
        android:layout_marginBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="На футбольному матчі одночасно можуть бути 5 суддей"
        android:textColor="@color/textColor"
        android:id="@+id/factSurvivalTV" />

    <ImageView
        android:visibility="invisible"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/right"
        android:id="@+id/rightSurvivalIV"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp" />

    <ImageView
        android:visibility="invisible"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/wrong"
        android:id="@+id/wrongSurvivalIV"
        android:layout_alignTop="@+id/rightSurvivalIV"
        android:layout_alignLeft="@+id/rightSurvivalIV"
        android:layout_alignStart="@+id/rightSurvivalIV" />

</RelativeLayout>
